# HomeWorks

./: .gitignore
Advanced C++ Programming/HW_01/HomeWork_1_1/: HomeWork_1_1.sln
Advanced C++ Programming/HW_01/HomeWork_1_2/: HomeWork_1_2.sln
Advanced C++ Programming/HW_01/HomeWork_1_3/: HomeWork_1_3.sln
Advanced C++ Programming/HW_02/HomeWork_2_1/: HomeWork_2_1.sln
Advanced C++ Programming/HW_03/HomeWork_3_1/: HomeWork_3_1.sln
Advanced C++ Programming/HW_03/HomeWork_3_2/: HomeWork_3_2.sln
Advanced C++ Programming/HW_04/HomeWork_4_1/: CMakeLists.txt  Test_main.cpp
Advanced C++ Programming/HW_04/HomeWork_4_2/: CMakeLists.txt  Test_main.cpp
Advanced C++ Programming/HW_05/HomeWork_5_1/: HomeWork_5_1.sln
Advanced C++ Programming/HW_05/HomeWork_5_2/: HomeWork_5_2.sln
Advanced C++ Programming/ini_parser/: ini_parser.sln
C++ Programming Basics/Course project/Racing simulator cmake/: CMakeLists.txt  VehiclesAndTracks.h
C++ Programming Basics/HW_10/HomeWork 10.2/: CMakeLists.txt  Equilateral_triangle.cpp  Figure.cpp  Rectangl.cpp
Course project/Racing simulator/: Racing simulator.sln
HW_01/HomeWork 1.1/: HomeWork 1.1.sln
HW_02/HomeWork 2.1/: HomeWork 2.1.sln
HW_02/HomeWork 2.2/: HomeWork 2.2.sln
HW_03/HomeWork 3.1/: HomeWork 3.1.sln
HW_03/HomeWork 3.2/: HomeWork 3.2.sln
HW_05/HomeWork 5.1/: HomeWork 5.1.sln
HW_06/HomeWork 6.1/: HomeWork 6.1.sln
HW_06/HomeWork 6.2/: HomeWork 6.2.sln
HW_07/HomeWork 7.1/: HomeWork 7.1.sln
HW_07/HomeWork 7.2/: HomeWork 7.2.sln
HW_08/HomeWork 8.2/: HomeWork 8.2.sln
HW_09/HomeWork 9.1/: HomeWork 9.1.sln
HW_10/HomeWork 10.1/: CMakeLists.txt  HomeWork_10_1.cpp  source.cpp
HW_10/HomeWork 10.2/: Creation_error.h  Equilateral_triangle.h  Isosceles_triangle.cpp  Parallelogram.cpp  Parallelogram.h  Triangle.cpp
HW_11/HomeWork 11.2/: HomeWork 11.2.sln
HW_11/HomeWork 11.3/: Leaver.h
HW_11/HomeWork 11.4/: HomeWork 11.4.sln
HW_11/HomeWork 11.5/: CMakeLists.txt  CreationError.cpp  Figure.h  Parallelogram.h  Quadrilateral.cpp  Rectangl.h  Rhombus.h  Right_triangle.h  Square.h  Triangle.h
Multi-threaded and asynchronous programming/HW_04/: circle.cpp  circle.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  line.cpp  line.h  shape.cpp  shape.h  sqr.cpp  sqr.h
QT/: .gitignore  .gitignore.txt
QT/AirportInspector/: CMakeLists.txt  airportinspector.ui  databasecache.cpp  workloadschedule.cpp  workloadschedule.h  workloadschedule.ui
QT/HomeWork_1/: CMakeLists.txt  main.cpp
QT/HomeWork_10/: mainwindow.cpp  tcpclient.cpp
QT/HomeWork_2/: CMakeLists.txt  main.cpp
QT/HomeWork_3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/HomeWork_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/HomeWork_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
QT/HomeWork_6/: mainwindow.cpp
QT/HomeWork_7/: mainwindow.cpp  mainwindow.h
QT/HomeWork_8/: database.cpp  database.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/HomeWork_9/: mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
SearchEngine/: CMakeLists.txt  config.ini
SearchEngine/inc/: config.h  configparser.h  crawler.h  database.h  downloader.h  indexer.h  queue_ts.h  server.h
SearchEngine/server/: CMakeLists.txt  main.cpp
SearchEngine/spider/: CMakeLists.txt  main.cpp
SearchEngine/src/: config.cpp  configparser.cpp  crawler.cpp  database.cpp  downloader.cpp  indexer.cpp  queue_ts.cpp  server.cpp
Unreal Engine/HW_1/: .clang-format  HW_1.uproject
Unreal Engine/LeaveMeAlone/: Дизайн-документ проекта LeaveMeAlone.docx
Working_with_PostgreSQL_from_C++/HomeWork_4/: CMakeLists.txt  main.cpp
Новая папка/ConsoleApplication1/: ConsoleApplication1.sln
(+1201 files in other folders)
